refactor modules to use an interface, simplify registration