@@ -1,27 +1,39 @@
-package au.com.glob.clodmc.command;
+package au.com.glob.clodmc.modules;
 
 import au.com.glob.clodmc.ClodMC;
 import java.util.ArrayList;
 import java.util.List;
 import org.bukkit.Bukkit;
 import org.bukkit.command.Command;
+import org.bukkit.command.CommandMap;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
 public abstract class SimpleCommand extends Command {
-  public static void register(@NotNull SimpleCommand command) {
-    ClodMC.instance.getServer().getCommandMap().register("clod-mc", command);
-  }
+  private static final List<String> commandNames = new ArrayList<>();
 
   protected SimpleCommand(@NotNull String name, @NotNull String description) {
-    super(name);
-    this.setDescription(description);
+    this(name, description, "/" + name);
   }
 
   protected SimpleCommand(
       @NotNull String name, @NotNull String usage, @NotNull String description) {
     super(name, description, usage, List.of());
+    this.setDescription(description);
+    ClodMC.instance.getServer().getCommandMap().register("clod-mc", this);
+    commandNames.add(this.getName());
+  }
+
+  public static void unregisterAll() {
+    CommandMap commandMap = ClodMC.instance.getServer().getCommandMap();
+    for (String name : commandNames) {
+      Command command = commandMap.getCommand(name);
+      if (command != null) {
+        command.unregister(commandMap);
+      }
+    }
+    commandNames.clear();
   }
 
   // execution
@@ -49,14 +61,14 @@ public abstract class SimpleCommand extends Command {
     if (args.isEmpty()) {
       throw new CommandError(this.usageMessage);
     }
-    return args.remove(0);
+    return args.removeFirst();
   }
 
   protected @NotNull String popArg(@NotNull List<String> args, @NotNull String fallback) {
     if (args.isEmpty()) {
       return fallback;
     }
-    return args.remove(0);
+    return args.removeFirst();
   }
 
   protected @NotNull Player popPlayerArg(@NotNull List<String> args) {
