@@ -1,10 +1,10 @@
 package au.com.glob.clodmc.modules.player;
 
 import au.com.glob.clodmc.ClodMC;
+import au.com.glob.clodmc.modules.Module;
 import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
-import org.bukkit.Bukkit;
 import org.bukkit.World;
 import org.bukkit.entity.LivingEntity;
 import org.bukkit.entity.Player;
@@ -12,11 +12,7 @@ import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
 import org.bukkit.event.world.TimeSkipEvent;
 
-public class Sleep implements Listener {
-  public static void register() {
-    Bukkit.getServer().getPluginManager().registerEvents(new Sleep(), ClodMC.instance);
-  }
-
+public class Sleep implements Listener, Module {
   @EventHandler
   public void onTimeSkip(TimeSkipEvent event) {
     Collection<? extends Player> players = ClodMC.instance.getServer().getOnlinePlayers();
@@ -33,7 +29,7 @@ public class Sleep implements Listener {
 
     String names;
     if (sleeping.size() == 1) {
-      names = sleeping.get(0);
+      names = sleeping.getFirst();
     } else if (sleeping.size() == 2) {
       names = String.join(" and ", sleeping);
     } else {
@@ -41,8 +37,7 @@ public class Sleep implements Listener {
           String.join(
               ", and ",
               List.of(
-                  String.join(", ", sleeping.subList(0, sleeping.size() - 1)),
-                  sleeping.get(sleeping.size() - 1)));
+                  String.join(", ", sleeping.subList(0, sleeping.size() - 1)), sleeping.getLast()));
     }
     String message = "<grey>" + names + " skipped the night</grey>";
 
